--- a/doks-theme/_sass/objects/_section.scss
+++ b/doks-theme/_sass/objects/_section.scss
@@ -17,10 +17,10 @@
 }
 
 .section {
-	padding: 3.75rem 0 (3.75rem - 1.25rem) 0;
+	padding: 3.75rem 0 (3.75rem) 0;
 
 	@media screen and (min-width: $screen-sm-min) {
-		padding: 6.25rem 0 0 0;
+		padding: 6.25rem 0 6.25rem 0;
 	}
 
 // Printing Optimization
